[tool.poetry]
name = "gillespyx"
version = "0.1.0"
description = "Implementation of the Gillespie SSA method in cython"
authors = ["Flavio Codeço Coelho <fccoelho@gmail.com>"]
license = "BSD 3-Clause"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Cython = "^3.0.9"
CythonGSL = "^0.2.2"
numpy = "^1.26.4"
scipy = "^1.12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-cython = "^0.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
